field labels overlapping fix

--- a/themes/SuiteP/css/listview.scss
+++ b/themes/SuiteP/css/listview.scss
@@ -1777,7 +1777,6 @@ div.qtip.qtip-default {
 
 #search_form label {
   font-weight: bold;
-  white-space: nowrap;
 }
 
 .modal-content #search_form label {
